--- a/app/views/payments/_status_grid.html.erb
+++ b/app/views/payments/_status_grid.html.erb
@@ -2,12 +2,12 @@
 
   <div class='row-fluid'>
   	<%= @status_info %>
-  	<% Rails.logger.debug "view txn_status="+@txn_status %>
+  	<% # Rails.logger.debug "view txn_status="+@txn_status %>
   </div>
 
   <div class='row-fluid'>&nbsp;</div>
   <div class='row-fluid'>
-  	<% if @txn_status == 'Complete' %>
+  	<% if @complete == true %>
     	<%= link_to "Take a new payment", payments_path, { class: 'btn btn-link'} %>
     <% end %>
   </div>
